package iuh.fit.decorator;

public interface TaxCalculator {
    double calculate(double price);
}
