package iuh.fit.state;

public interface ProductState {
    void handle(Product product);
}
