package iuh.fit.strategy;

public interface TaxStrategy {
    double calculate(double price);
}
